fix dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,18 +5,21 @@
   --foreground: #171717;
 }
 
+html.light, body.light {
+  background-color: #ffffff;
+  color: #000000;
+}
+
+html.dark, body.dark {
+  background-color: #111111;
+  color: #ffffff;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
 }
 
 body {
